# TFM-reblogs-graph

./: .gitignore  README.md  graph-analysis.ipynb  main.py  pyproject.toml  queryes.cypher
crawler/: author.py  rebloggers.py
data/: README.md
models/: entities.py
